新增频道功能和全局搜索
